Add config option to persist ai check results