@@ -1,4 +1,4 @@
-package com.box.l10n.mojito.service.openai;
+package com.box.l10n.mojito.service.ai.openai;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -11,9 +11,6 @@ import com.box.l10n.mojito.okapi.extractor.AssetExtractorTextUnit;
 import com.box.l10n.mojito.openai.OpenAIClient;
 import com.box.l10n.mojito.rest.ai.AICheckRequest;
 import com.box.l10n.mojito.rest.ai.AICheckResponse;
-import com.box.l10n.mojito.service.ai.openai.AIStringCheckRepository;
-import com.box.l10n.mojito.service.ai.openai.OpenAILLMService;
-import com.box.l10n.mojito.service.ai.openai.OpenAIPromptService;
 import com.box.l10n.mojito.service.repository.RepositoryRepository;
 import java.util.ArrayList;
 import java.util.List;
@@ -42,6 +39,7 @@ class OpenAILLMServiceTest {
   @BeforeEach
   void setUp() {
     MockitoAnnotations.openMocks(this);
+    openAILLMService.persistResults = true;
   }
 
   @Test
@@ -84,7 +82,7 @@ class OpenAILLMServiceTest {
     assertNotNull(response);
     assertEquals(1, response.getResults().size());
     assertTrue(response.getResults().containsKey("A test string"));
-    assertTrue(response.getResults().get("A test string").get(0).isSuccess());
+    assertTrue(response.getResults().get("A test string").getFirst().isSuccess());
     verify(aiStringCheckRepository, times(1)).save(any());
   }
 
@@ -220,6 +218,51 @@ class OpenAILLMServiceTest {
     assertEquals(
         "No prompts found for repository id: 1, skipping check.",
         response.getResults().get("A test string").getFirst().getSuggestedFix());
+    verify(aiStringCheckRepository, times(0)).save(any());
+  }
+
+  @Test
+  public void testNoResultsPersistence() {
+    AIPrompt prompt = new AIPrompt();
+    prompt.setId(1L);
+    prompt.setUserPrompt("Check strings for spelling");
+    prompt.setModelName("gtp-3.5-turbo");
+    prompt.setPromptTemperature(0.0F);
+    List<AIPrompt> prompts = List.of(prompt);
+    AssetExtractorTextUnit assetExtractorTextUnit = new AssetExtractorTextUnit();
+    assetExtractorTextUnit.setSource("A test string");
+    assetExtractorTextUnit.setName("A test string --- A test context");
+    assetExtractorTextUnit.setComments("A test comment");
+    List<AssetExtractorTextUnit> textUnits = List.of(assetExtractorTextUnit);
+    AICheckRequest AICheckRequest = new AICheckRequest();
+    AICheckRequest.setRepositoryName("testRepo");
+    AICheckRequest.setTextUnits(textUnits);
+    Repository repository = new Repository();
+    repository.setId(1L);
+    when(repositoryRepository.findByName("testRepo")).thenReturn(repository);
+    when(promptService.getPromptsByRepositoryAndPromptType(
+            repository, PromptType.SOURCE_STRING_CHECKER))
+        .thenReturn(prompts);
+    List<OpenAIClient.ChatCompletionsResponse.Choice> choices =
+        List.of(
+            new OpenAIClient.ChatCompletionsResponse.Choice(
+                0,
+                new OpenAIClient.ChatCompletionsResponse.Choice.Message(
+                    "test", "{\"success\": true, \"suggestedFix\": \"\"}"),
+                null));
+    OpenAIClient.ChatCompletionsResponse chatCompletionsResponse =
+        new OpenAIClient.ChatCompletionsResponse(null, null, null, null, choices, null, null);
+    CompletableFuture<OpenAIClient.ChatCompletionsResponse> futureResponse =
+        CompletableFuture.completedFuture(chatCompletionsResponse);
+    when(openAIClient.getChatCompletions(any(OpenAIClient.ChatCompletionsRequest.class)))
+        .thenReturn(futureResponse);
+    openAILLMService.persistResults = false;
+
+    AICheckResponse response = openAILLMService.executeAIChecks(AICheckRequest);
+    assertNotNull(response);
+    assertEquals(1, response.getResults().size());
+    assertTrue(response.getResults().containsKey("A test string"));
+    assertTrue(response.getResults().get("A test string").getFirst().isSuccess());
     verify(aiStringCheckRepository, times(0)).save(any());
   }
 }
